--- a/.github/actions/maven-build-and-test/action.yml
+++ b/.github/actions/maven-build-and-test/action.yml
@@ -5,7 +5,7 @@ inputs:
   settings-path:
     description: Path of maven settings file
     required: true
-  PAT:
+  access-token:
     description: Personal access token to access external dependencies 
     required: true
 
@@ -13,6 +13,8 @@ runs:
   using: composite
 
   steps:
+  - uses: actions/checkout@v4
+
   - name: Set up JDK 11
     uses: actions/setup-java@v3
     with:
@@ -27,4 +29,4 @@ runs:
     working-directory: ${{ inputs.settings-path }}
     run: mvn install -B -s settings.xml
     env:
-      GITHUB_TOKEN: ${{ inputs.PAT }}
+      GITHUB_TOKEN: ${{ inputs.access-token }}
