--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Flink States - Build and Test
-        uses: trifork/cheetah-platform-examples/.github/actions/maven-build-and-test@main
+        uses: ./.github/actions/maven-build-and-test
         with: 
           settings-path: ./FlinkStates/
           access-token: ${{ secrets.PACKAGE_PAT }}
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Merge Two Streams - Build and Test
-        uses: trifork/cheetah-platform-examples/.github/actions/maven-build-and-test@main
+        uses: ./.github/actions/maven-build-and-test
         with: 
           settings-path: ./MergeTwoStreams/
           access-token: ${{ secrets.PACKAGE_PAT }}
@@ -38,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Multiple Side Output - Build and Test
-        uses: trifork/cheetah-platform-examples/.github/actions/maven-build-and-test@main
+        uses: ./.github/actions/maven-build-and-test
         with: 
           settings-path: ./MultipleSideOutput/
           access-token: ${{ secrets.PACKAGE_PAT }}
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Observability - Build and Test
-        uses: trifork/cheetah-platform-examples/.github/actions/maven-build-and-test@main
+        uses: ./.github/actions/maven-build-and-test
         with: 
           settings-path: ./Observability/
           access-token: ${{ secrets.PACKAGE_PAT }}
@@ -58,7 +58,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Tumbling Window - Build and Test
-        uses: trifork/cheetah-platform-examples/.github/actions/maven-build-and-test@main
+        uses: ./.github/actions/maven-build-and-test
         with: 
           settings-path: ./TumblingWindow/
           access-token: ${{ secrets.PACKAGE_PAT }}
