--- a/ExternalLookup/docker-compose.yaml
+++ b/ExternalLookup/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
         - GITHUB_ACTOR
     command: |
       standalone-job
-      --job-classname Externallookup.job.ExternalLookupJob
+      --job-classname cheetah.example.externallookup.job.ExternalLookupJob
       --kafka-bootstrap-servers kafka:19092
       --kafka-group-id ExternalLookup-group-id
       --kafka-security-protocol SASL_PLAINTEXT
