--- a/FlinkStates/docker-compose.yaml
+++ b/FlinkStates/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
         - GITHUB_ACTOR
     command: |
       standalone-job
-      --job-classname cheetah.example.job.FlinkStatesJob
+      --job-classname cheetah.example.flinkstates.job.FlinkStatesJob
       --kafka-bootstrap-servers kafka:19092
       --kafka-group-id FlinkStates-group-id
       --kafka-security-protocol SASL_PLAINTEXT
