--- a/MergeTwoStreams/docker-compose.yaml
+++ b/MergeTwoStreams/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
         - GITHUB_ACTOR
     command: |
       standalone-job
-      --job-classname cheetah.example.mergestreams.job.MergeTwoStreamsJob
+      --job-classname cheetah.example.mergetwostreams.job.MergeTwoStreamsJob
       --kafka-bootstrap-servers kafka:19092
       --kafka-group-id MergeTwoStreams-group-id
       --kafka-security-protocol SASL_PLAINTEXT
