--- a/MultipleSideOutput/docker-compose.yaml
+++ b/MultipleSideOutput/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
         - GITHUB_ACTOR
     command: |
       standalone-job
-      --job-classname sideOutputExample.job.MultipleSideOutputExampleJob
+      --job-classname cheetah.example.multiplesideoutput.job.MultipleSideOutputExampleJob
       --kafka-bootstrap-servers kafka:19092
       --kafka-group-id MultipleSideOutput-group-id
       --kafka-security-protocol SASL_PLAINTEXT
