--- a/TumblingWindow/docker-compose.yaml
+++ b/TumblingWindow/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
         - GITHUB_ACTOR
     command: |
       standalone-job
-      --job-classname tumblingwindow.job.TumblingWindowJob
+      --job-classname cheetah.example.tumblingwindow.job.TumblingWindowJob
       --kafka-bootstrap-servers kafka:19092      
       --kafka-group-id MergeTwoStreams-group-id
       --kafka-security-protocol SASL_PLAINTEXT
