--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -78,3 +78,16 @@ jobs:
         with: 
           settings-path: ./TumblingWindow/
           access-token: ${{ secrets.PACKAGE_PAT }}
+  
+  external-lookup-build-and-test:
+    name: "External Lookup - Build and Test"
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
+      - name: External Lookup - Build and Test
+        uses: ./.github/actions/maven-build-and-test
+        with: 
+          settings-path: ./ExternalLookup/
+          access-token: ${{ secrets.PACKAGE_PAT }}
