--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,19 @@ replay_pid*
 # Maven
 .m2/*
 !.m2
+
+# .NET build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+[Oo]ut/
+msbuild.log
+msbuild.err
+msbuild.wrn
