--- a/Standard jobs/Storage-job.yaml
+++ b/Standard jobs/Storage-job.yaml
@@ -9,7 +9,7 @@ services:
       --job-classname com.trifork.cheetah.apps.jobs.storage.OpensearchStorageJob
       --kafka-bootstrap-servers kafka:19092
       --kafka-group-id storage-job-group
-      --input-kafka-topic your-topic-name
+      --input-kafka-topic InputTopic
 
       --index-base-name your-index-name
 
