--- a/TransformAndStore/docker-compose.yaml
+++ b/TransformAndStore/docker-compose.yaml
@@ -34,7 +34,7 @@ services:
       standalone-job
       --job-classname cheetah.example.transformandstore.job.TransformAndStoreJob
       --kafka-bootstrap-servers kafka:19092
-      --input-kafka-topic InputTopic
+      --input-kafka-topic TransfromAndStoreInputTopic
       --kafka-group-id transform-and-store-group-id
       --kafka-security-protocol SASL_PLAINTEXT
       --opensearch-hosts http://opensearch:9200
