--- a/.github/workflows/component-test.yml
+++ b/.github/workflows/component-test.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Build Flink States example image and run component test
         uses: ./.github/actions/component-test
-        if: ${{ steps.changed-files.outputs.src-changed == 'true' }}
+        if: ${{ steps.changed-files.outputs.check-files-changed == 'true' }}
         with:
           context-path: ./FlinkStates/
           access-token: ${{ secrets.PACKAGE_PAT }}
