--- a/.github/workflows/component-test.yml
+++ b/.github/workflows/component-test.yml
@@ -44,7 +44,11 @@ jobs:
         uses: tj-actions/changed-files@v40
         id: changed-files
         with: 
-          files: ./FlinkStates/**
+          files: |
+            './FlinkStates/**'
+            '!/FlinkStates/**.md'
+            '!/FlinkStates/**.gitignore'
+
 
       - name: Build Flink States example image and run component test
         uses: ./.github/actions/component-test
