--- a/.github/workflows/component-test.yml
+++ b/.github/workflows/component-test.yml
@@ -44,11 +44,10 @@ jobs:
         uses: tj-actions/changed-files@v40
         id: changed-files
         with: 
-          files: |
-            './FlinkStates/**'
-            '!/FlinkStates/**.md'
-            '!/FlinkStates/**.gitignore'
-
+          files_yaml: |
+            FlinkStates/**
+            !FlinkStates/**.md
+            !FlinkStates/**.gitignore
 
       - name: Build Flink States example image and run component test
         uses: ./.github/actions/component-test
