--- a/.github/workflows/component-test.yml
+++ b/.github/workflows/component-test.yml
@@ -44,10 +44,8 @@ jobs:
         uses: tj-actions/changed-files@v40
         id: changed-files
         with: 
-          files_yaml: |
-            FlinkStates/**
-            !FlinkStates/**.md
-            !FlinkStates/**.gitignore
+          files: FlinkStates/**
+          files_ignore: FlinkStates/**.md
 
       - name: Build Flink States example image and run component test
         uses: ./.github/actions/component-test
