--- a/.github/workflows/component-test.yml
+++ b/.github/workflows/component-test.yml
@@ -44,8 +44,9 @@ jobs:
         uses: tj-actions/changed-files@v40
         id: changed-files
         with: 
-          files: FlinkStates/**
-          files_ignore: FlinkStates/**.md
+          files: |
+            FlinkStates/**
+            FlinkStates/!*.md
 
       - name: Build Flink States example image and run component test
         uses: ./.github/actions/component-test
