--- a/.github/workflows/component-test.yml
+++ b/.github/workflows/component-test.yml
@@ -22,14 +22,7 @@ on:
 
 jobs:
   should-run: # seperate step to support ci/cd status checks
-    runs-on: ubuntu-latest
-    outputs:
-      should-run: ${{ steps.should-run.outputs.should-run }}
-
-    steps:
-      - name: E2E should run
-        id: should-run
-        uses: trifork/cheetah-infrastructure-utils-workflows/.github/actions/testing/e2e-should-run@main
+    uses: trifork/cheetah-infrastructure-utils-workflows/.github/workflows/e2e-should-run.yml@main
 
   flink-state-component-test:
     name: "Flink States example component test"
