--- a/ExternalLookup/pom.xml
+++ b/ExternalLookup/pom.xml
@@ -26,7 +26,7 @@ under the License.
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>ExternalLookup Flink Job</name>
+    <name>ExternalLookup Flink Job test</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
