--- a/FlinkAggregate/docker-compose.yaml
+++ b/FlinkAggregate/docker-compose.yaml
@@ -26,9 +26,14 @@ services:
       secrets:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
-    ports:
-      - "8082:8081"
-    command: jobmanager
+    command: |
+      standalone-job
+      --job-classname cheetah.example.flinkstates.job.FlinkStatesJob
+      --kafka-bootstrap-servers kafka:19092
+      --kafka-group-id FlinkStates-group-id
+      --kafka-security-protocol SASL_PLAINTEXT
+      --input-kafka-topic FlinkStatesInputTopic
+      --output-kafka-topic-aggregating FlinkStatesOutputTopic-aggregating
     environment:
       KAFKA_CLIENT_ID: ClientId
       KAFKA_CLIENT_SECRET: 1234
