entry-class+sout

--- a/FlinkStates/pom.xml
+++ b/FlinkStates/pom.xml
@@ -186,6 +186,11 @@ under the License.
                                     </excludes>
                                 </filter>
                             </filters>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>cheetah.example.flinkstates.job.FlinkStatesJob</mainClass>
+                                </transformer>
+                            </transformers>
                         </configuration>
                     </execution>
                 </executions>
